objects/bre__Event_Pricing_Package__c.object
<CustomObject>
    <fields>
        <fullName>bre__AC_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AC Event</label>
        <referenceTo>bre__BR_Event__c</referenceTo>
        <relationshipLabel>Event Pricing Packages</relationshipLabel>
        <relationshipName>Event_Pricing_Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bre__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>bre__Early_Bird_End_Datetime__c</fullName>
        <label>Early Bird End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre__Early_Bird_Price__c</fullName>
        <label>Early Bird Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bre__Normal_Price__c</fullName>
        <label>Normal Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AC Event Pricing Package</label>
    <listViews>
        <fullName>bre__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Pricing Packages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Event Pricing Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>bre__Early_Bird_Deadline_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(bre__Early_Bird_Price__c)) ,
ISBLANK( bre__Early_Bird_End_Datetime__c ) )</errorConditionFormula>
        <errorDisplayField>bre__Early_Bird_End_Datetime__c</errorDisplayField>
        <errorMessage>You must specify early bird price deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>bre__Early_Bird_Price_Deadline_Max_Value</fullName>
        <active>true</active>
        <errorConditionFormula>bre__Early_Bird_End_Datetime__c  &gt;  bre__AC_Event__r.bre__Start_Date__c</errorConditionFormula>
        <errorDisplayField>bre__Early_Bird_End_Datetime__c</errorDisplayField>
        <errorMessage>Early bird price deadline cannot be later than event start time.</errorMessage>
    </validationRules>
</CustomObject>